wcfsetup/install/files/style/ui/dialog.scss
.dialogOverlay {
	background-color: transparent;
	bottom: 0;
	left: 0;
	opacity: 0;
	padding: 100px 0;
	position: fixed;
	right: 0;
	top: 0;
	transition: opacity .12s linear, visibility 0s linear .3s;
	visibility: hidden;
	will-change: opacity;
	z-index: 399;
	
	&[aria-hidden=false] {
		opacity: 1;
		transition-delay: 0s;
		visibility: visible;
	}
	
	&::before {
		background-color: rgba(0, 0, 0, .4);
		bottom: 0;
		content: "";
		display: block;
		left: 0;
		position: fixed;
		right: 0;
		top: 0;
		z-index: 100;
	}
}

@keyframes wcfDialog {
	0%   { visibility: visible; top: 8%; }
	100% { visibility: visible; top: 10%; }
}

@keyframes wcfDialogOut {
	0% { visibility: visible; top: 10%; }
	100% { visibility: hidden; top: 12%; }
}

.dialogContainer {
	animation: wcfDialogOut .3s;
	animation-fill-mode: forwards;
	box-shadow: 0 1px 15px 0 rgba(0, 0, 0, .3);
	left: 50%;
	max-height: 80%;
	max-width: 80%;
	min-width: 400px;
	position: absolute;
	transform: translateX(-50%);
	will-change: transform;
	z-index: 200;
	
	&[aria-hidden=false] {
		animation: wcfDialog .3s;
		animation-fill-mode: forwards;
		
		& ~ .dialogContainer[aria-hidden=false] {
			z-index: 50;
		}
	}
	
	> header {
		background-color: $wcfHeaderBackground;
		color: $wcfHeaderText;
		display: flex;
		padding: 10px 20px;
		
		> span {
			flex: 1 auto;
			
			@extend .wcfFontHeadline;
		}
		
		> a {
			color: $wcfHeaderLink;
			flex: 0 0 20px;
			font-family: FontAwesome;
			font-size: 18px;
			text-align: right;
			text-decoration: none;
			
			&::before {
				content: $fa-var-times;
			}
			
			&:hover {
				color: $wcfHeaderLinkActive;
			}
			
			> span {
				display: none;
			}
		}
	}
	
	> .dialogContent {
		background-color: $wcfContentBackground;
		color: $wcfContentText;
		overflow: auto;
		
		&:not(.dialogContentNoPadding) {
			padding: 30px 20px 0 20px;
			
			&::after {
				content: "";
				display: block;
				height: 10px;
			}
			
			&.dialogForm::after {
				height: 17px;
			}
		}
		
		&:not(.dialogForm) {
			border-bottom-left-radius: 3px;
			border-bottom-right-radius: 3px;
		}
		
		a {
			color: $wcfContentLink;
			
			&:hover {
				color: $wcfContentLinkActive;
			}
		}
		
		dl:not(.plain) {
			> dt {
				float: none;
				text-align: left;
				width: auto !important;
				
				&:empty {
					margin-bottom: 0;
				}
			}
			
			> dd {
				margin-left: 0 !important;
			}
		}
		
		.dialogFormSubmit {
			background-color: $wcfSidebarBackground;
			border-top: 1px solid $wcfContentBorderInner;
			bottom: 0;
			left: 0;
			padding: 10px;
			position: absolute;
			right: 0;
		}
	}
}

@media only screen and (max-width: 800px) {
}

/* static dialogs */
.jsStaticDialogContent {
	display: none;
}

/* package (un-)installation */
#packageInstallationDialogContainer > .boxHeadline {
	margin-top: 0;
}

.spinner {
	background-color: rgb(255, 255, 255);
	border: 1px solid rgb(204, 204, 204);
	box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .2);
	color: rgb(44, 62, 80);
	left: 50%;
	opacity: 0;
	padding: 10px;
	position: fixed;
	text-align: center;
	top: 200px;
	transform: translateX(-50%);
	transition: visibility 0s linear .1s, opacity .1s linear;
	visibility: hidden;
	z-index: 401;
	
	&.active {
		opacity: 1;
		visibility: visible;
		
		transition-delay: 0s;
	}
	
	> span:not(.icon) {
		display: block;
		margin-top: 5px;
	}
}

/* notification overlay */
#systemNotification {
	left: 0;
	opacity: 0;
	pointer-events: none;
	position: fixed;
	top: 0;
	transform: translateY(-100%);
	transition: visibility .2s linear .2s, transform .2s linear, opacity .2s linear;
	visibility: hidden;
	width: 100%;
	z-index: 460;
	
	&.active {
		opacity: 1;
		transform: translateY(0%);
		transition-delay: 0s;
		visibility: visible;
	}
	
	> p {
		border-top-left-radius: 0;
		border-top-right-radius: 0;
		border-top-width: 0;
		cursor: pointer;
		display: table;
		margin: 0 auto;
		max-width: 80%;
		pointer-events: auto;
		
		//.userSelectNone;
	}
}

